codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__signed_out_usage_command_reports_chatgpt_login_requirement.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
■ 登录 ChatGPT 后才能使用 /usage。
