codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_archive_confirmation_popup.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
  是 否 归 档 此 会 话 ？
  确 定 吗 ？ 这 将 归 档 当 前 会 话

› 1. 否 ， 不 归 档   返 回 当 前 会 话
  2. 是 ， 归 档     立 即 归 档 此 会 话

  按  enter 确 认 ， 或 按  esc 返 回
