codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_copy_picker_status_fields.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "render_bottom_popup(&chat,\n100).replace(&directory,\n\"[[workspace]]\").replace(crate::version::CODEX_CLI_VERSION, \"VERSION\")"
---
  Copy to clipboard

› 1. Whole status  >_ OpenAI Codex (vVERSION)
  2. 模 型           gpt-5.5
  3. 目 录           [[workspace]]
  4. 会 话 名 称       Clipboard example
  5. 会 话  ID       00000000-0000-0000-0000-000000000123

  按  enter 确 认 ， 或 按  esc 返 回
