codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_copy_whole_status.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "whole_status.replace(&directory,\n\"[[workspace]]\").replace(crate::version::CODEX_CLI_VERSION, \"VERSION\")"
---
>_ OpenAI Codex (vVERSION)

访问 https://chatgpt.com/codex/settings/usage 查看最新的
速率限制和点数信息

 模型:         GPT-5.5 (推理强度 medium, 推理摘要 auto)
 模型提供商:   openai
 目录:         [[workspace]]
 权限:         只读（请求审批）
 Agents.md:    <无>
 会话名称:     Clipboard example
 协作模式:     Default
 会话:         00000000-0000-0000-0000-000000000123

 Token 用量:   0 总计  (0 输入 + 0 输出)
 限制:         数据尚不可用
