codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_delete_confirmation_popup.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
  是 否 删 除 此 会 话 ？
  此 操 作 无 法 撤 销 ， 子 代 理 会 话 也 将 被 删 除 。

› 1. 否 ， 保 留 此 会 话   返 回 当 前 会 话
  2. 是 ， 删 除 并 退 出   立 即 永 久 删 除 此 会 话

  按  enter 确 认 ， 或 按  esc 返 回
