codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_export_filename_prompt.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
▌ Save conversation
▌
▌ codex-session-00000000-0000-0000-0000-000000000123.md

按  enter 确 认 ， 或 按  esc 返 回
